# Hy3

./: .env  .env.example  .gitignore  .mcp.json  CODEBUDDY.md  LICENSE  PR_DESCRIPTION.md  README.md  README_CN.md  api_demo.py  basic_chat.md  error_handling.md  first_request.py  index.html  non_streaming_vs_streaming.md  pyproject.toml  quickstart.md  quickstart_CN.md  quickstart_cn.md  reasoning_mode.md  requirements-api.txt  requirements.txt  run.py  start.bat  streaming_chat.md  test_api.py  tool_calling.md  utils.py  utils.py.txt  work.md
MCP_Server/: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml  setup.py
MCP_Server/scripts/: install.ps1  install.sh
MCP_Server/src/hy3_mcp_server/: __init__.py  config.py  server.py  (+1 more)
MCP_Server/tests/: test_config.py  test_hy3_client.py
apps/ctxpilot/: .env.example  .gitignore  DESIGN.md  ISSUE4_REQUIREMENTS.md  README.md  pyproject.toml
apps/scenarioforge/: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml
examples/hy3-mcp-server/: README.md  pyproject.toml
examples/hy3-repo-scout/: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
examples/hy3_architecture_mcp/: .env.example  .gitignore  LICENSE  PR_DRAFT.md  README.md  pyproject.toml
hy3-data-analyst/: .env.example  .gitignore  LICENSE  README.CN.md  README.md  pyproject.toml  requirements.txt  scores.csv  stdio_client.py
hy3-data-analyst/demo/: README.md
hy3-data-analyst/examples/: codebuddy.mcp.json
hy3-data-analyst/tests/: test_data_utils.py  test_plot.py  test_server.py  test_stats.py
hy3-mcp-server/: .env.example  .gitignore  .mcp.json.example  DEVELOPMENT.md  README.md  README_CN.md  pyproject.toml  requirements.txt  test_mcp.py
hy3-mcp-server/demo/: demo_output.txt  generate_demo.py  generate_gif.py
hy3-mcp-server/hy3_mcp_server/: hy3_client.py  server.py
hy3-mcp-server/hy3_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hy3-mcp-server/tests/: test_hy3_client.py  test_integration.py  test_tools.py
hy3_mcp_server/: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
hy3_mcp_server/configs/: cline_mcp_settings.json  workbuddy_mcp.md
hy3_mcp_server/examples/: graduate_employment_sample.csv  大学生毕业就业岗位选择数据集.csv
hy3_mcp_server/scripts/: e2e_test.py  smoke_test.py
hyshell/: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml
hyshell/demo/: ansi2gif.py  fetch_font.py  record_gifs.py
hyshell/tests/: conftest.py  test_app_e2e.py  test_cli.py  test_config.py  test_executor.py  test_fake_backend.py  test_fixloop.py  test_gifs.py  test_history.py  test_llm_parsing.py  test_safety.py
issue3/: .env.example  .gitignore  README.md  demo.md  mcp_client_check.py  pyproject.toml  requirements.txt  run_mcp.ps1  sample_data.csv  sample_data.json  server.py  smoke_test.py
issue3/examples/: cline_mcp_settings.json  codebuddy-mcp.json  mcp-inspector.md
issue4/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
issue4/demos/: chat-demo.js  research-demo.js  translate-demo.js
issue4/hy3research/: __init__.py  __main__.py  client.py  config.py  fetcher.py  planner.py  reporter.py  searcher.py  server.py  synthesizer.py  ui.py
issue4/public/: app.js  index.html  style.css
issue4/src/: hy3-client.js  research.js  translator.js
issue4/templates/: report.html
issue4/tests/: test_client_mock.py  test_fetcher.py  test_planner.py  test_searcher.py
mcp/: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  README_CN.md  pyproject.toml
mcp-server/: README.md  README_EN.md  pyproject.toml
mcp-server/assets/: demo_transcript.json
mcp-server/clients/: claude-code.sh  cline.mcp.json  codebuddy.mcp.json  cursor.mcp.json
mcp-server/code-review/: .env.example  README.md  requirements.txt  server.py
mcp-server/scripts/: raw_stdio_client.py  record_demo.py  render_gif.py
mcp-server/tests/: conftest.py  test_fake_backend.py  test_packaging.py  test_security.py  test_settings.py  test_sources_files.py  test_sources_search.py  test_stdio_e2e_raw.py  test_stdio_e2e_sdk.py  test_tools_unit.py
mcp-servers/antipattern/: .env.example  .gitignore  README.md  pyproject.toml
mcp-servers/hy3-code-assistant/: .env.example  README.md  demo.md  mcp_client_check.py  pyproject.toml  requirements.txt  run_mcp.ps1  sample.py  server.py  smoke_test.py  start_inspector.cmd
mcp-servers/hy3-data-analyst/: .env.example  README.md  README_CN.md  VALIDATION.md  pyproject.toml
mcp-servers/hy3-docx-assistant/: .gitignore  README.md  pyproject.toml
mcp/client_configs/: cline_mcp_settings.json  codebuddy_mcp.json  python_direct_mcp.json
mcp/demo/: demo_mcp_client.py
mcp/hy3-deep-research/: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  server.py
mcp/tests/: conftest.py  test_config.py  test_fetch.py  test_hy3_client.py  test_research.py  test_search.py  test_server.py
mcp_server/: .env.example  .gitignore  README.md  pyproject.toml
mcp_server/examples/: codebuddy.mcp.json  cursor.mcp.json  demo-security-bug.diff
mcp_server/tests/: test_config.py  test_examples.py  test_git_service.py  test_hy3_client.py  test_review_service.py  test_server.py  test_smoke_test.py
mcp_servers/api_guardian/: .env.example  README.md  README_EN.md  pyproject.toml
mcp_servers/code_review/: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
mcp_servers/deep_research/: .env.example  .gitignore  README.md  pyproject.toml
mcp_servers/hy3_ci_copilot/: .env.example  .gitignore  .mcp.json  README.md  README_CN.md  pyproject.toml
mcp_servers/hy3_deep_research/: README.md  pyproject.toml
mcp_servers/hy3_evalforge/: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
mcp_servers/hy3_taskrelay/: .gitignore  README.md  README_CN.md  pyproject.toml
mcp_servers/knowledge_base/: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
mcp_servers/leadintel/: README.md  pyproject.toml
(+1676 files in other folders)
