[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hy3-mcp"
version = "0.1.0"
description = "MCP Server for Hy3 - Deep Research Assistant"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
hy3-mcp = "hy3_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_mcp"]
