[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hy3-mcp"
version = "0.1.0"
description = "Hy3 Research & Code Assistant - an MCP (stdio) server powered by the Hy3 large language model"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Rhino-Bird 2026 contributor" }]
keywords = ["mcp", "model-context-protocol", "hy3", "hunyuan", "llm", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp>=1.10,<2",
  "openai>=1.99",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
demo = ["pillow>=10"]

[project.scripts]
hy3-mcp = "hy3_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
