[project]
name = "hy3-deep-research"
version = "0.1.0"
description = "Deep Research Assistant MCP Server powered by Tencent Hunyuan Hy3"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Tencent Hunyuan", email = "hunyuan_opensource@tencent.com" },
]
keywords = ["mcp", "hy3", "tencent", "hunyuan", "deep-research", "ai", "agent"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.40.0",
    "duckduckgo-search>=6.0.0",
    "trafilatura>=1.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

# One-click console entry point: `hy3-deep-research`
[project.scripts]
hy3-deep-research = "hy3_deep_research.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_deep_research"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/client_configs",
    "/demo",
    "/README.md",
    "/README_CN.md",
    "/CHANGELOG.md",
    "/.env.example",
    "/.python-version",
    "/Makefile",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
