[project]
name = "hy3-mcp-server"
version = "0.1.0"
description = "MCP server: local files + Hy3 code review / Q&A"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.6.0",
  "openai>=1.40.0",
]

[project.scripts]
hy3-mcp-server = "server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
