[project]
name = "hy3-deep-research-mcp"
version = "0.1.0"
description = "MCP Server: deep research assistant powered by Tencent Hy3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "mcp[cli]>=1.6.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
hy3-deep-research-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
