[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hy3-code-review-mcp"
version = "0.1.0"
description = "MCP Server for AI-powered code review using Hy3 (Tencent Hunyuan)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["mcp", "hy3", "code-review", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hy3-code-review-mcp = "hy3_code_review.server:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/mkun-dev/hy3-code-review-mcp"
Repository = "https://github.com/mkun-dev/hy3-code-review-mcp"
"Bug Tracker" = "https://github.com/mkun-dev/hy3-code-review-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_code_review"]
