[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hy3-ci-copilot"
version = "0.1.0"
description = "An MCP server powered by Hy3 for evidence-based CI/CD failure diagnosis"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Hy3 contributors" },
]
keywords = ["hy3", "mcp", "ci", "cd", "devops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28.1,<2",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
hy3-ci-copilot = "hy3_ci_copilot.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_ci_copilot"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
