[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "hy3-deep-research-mcp"
version = "0.1.0"
description = "An MCP deep-research server powered by Hy3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Hy3 Contributors" }]
keywords = ["mcp", "hy3", "deep-research", "model-context-protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "ddgs>=9.0,<10",
  "httpx>=0.27,<1",
  "mcp>=1.27,<2",
  "openai>=1.68,<3",
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
]

[project.scripts]
hy3-deep-research = "hy3_deep_research.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_deep_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

