[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "hy3-taskrelay"
version = "0.1.0"
description = "A stateless MCP server for evidence-grounded long-task handoffs powered by Hy3"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Hy3 contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28.1,<2",
  "pydantic>=2.11,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.24,<2",
  "pillow>=11,<12.3",
  "ruff>=0.12,<1",
  "twine>=6,<7",
]

[project.scripts]
hy3-taskrelay-mcp = "hy3_taskrelay.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_taskrelay"]

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/README_CN.md",
  "/pyproject.toml",
  "/src",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
