[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "hy3-knowledge-mcp"
version = "0.1.0"
description = "Local citation-grounded knowledge base MCP server for Hy3"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Hy3 contributors" }]
dependencies = [
  "mcp>=1.27,<2",
  "openai>=2,<3",
  "platformdirs>=4,<5",
  "pydantic>=2.12,<3",
  "pypdf>=6,<7",
  "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6,<8",
  "reportlab>=4,<5",
  "ruff>=0.12,<1",
  "twine>=6,<7",
]

[project.scripts]
hy3-knowledge-mcp = "hy3_knowledge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hy3_knowledge_mcp"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "live: requires a real Hy3 endpoint and is excluded from default CI",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
